application/payment-service/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment
  labels:
    app.kubernetes.io/name: payment-service
    app.kubernetes.io/part-of: banking-platform
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/version: "1.0.0"
    environment: production
    team: payments
    business-unit: digital-banking
