application/payment-service/13-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payment-service
  namespace: payment
  labels:
    app.kubernetes.io/name: payment-service
    app.kubernetes.io/instance: payment-service
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: banking-platform
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: kubectl
    environment: production

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: payment-service
      app.kubernetes.io/instance: payment-service

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring

      ports:
        - protocol: TCP
          port: 8080

  egress:

    # DNS
    - to:

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53

    # PostgreSQL
    - ports:
        - protocol: TCP
          port: 5432

    # Redis
    - ports:
        - protocol: TCP
          port: 6379

    # HTTPS
    - ports:
        - protocol: TCP
          port: 443
